--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/Larson.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- aos -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <title>Larson Freelancer</title>
+ 
 </head>
 
 <body>
@@ -23,6 +26,8 @@
       emailjs.init("6SV7MIv3wLeQw068j");
     })();
   </script>
+ 
+
 </body>
 
 </html>
